# optimization

./: Cargo.toml  README.md  flake.nix
src/: approx_model.rs  backward.rs  binary.rs  compound.rs  conjugate_directions.rs  enumerate.rs  fibonacci.rs  functions.rs  iterative_conditional.rs  main.rs  method.rs  repeating.rs  restriction.rs  task.rs  uniform.rs  utils.rs  zeidel.rs
