[package]
name = "optimization"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
clippy.perf = "deny"

[dependencies]
num = "0.4.0"
ordered-float = "3.7.0"
rand = "0.8.5"
nalgebra = { version = "0.32.2", features=["rand"] }
scilib = "0.7.0"
roots = "0.0.8"
polynomial = "0.2.5"
derive_more = { version = "1.0.0-beta.2", features = ["constructor", "from"] }

[dev-dependencies]
approx = "0.5.1"
lazy_static = "1.4.0"
test-case = "3.1.0"
