[package]
name = "optimization"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
clippy.perf = "deny"

[dependencies]
num = "0.4.0"
ordered-float = "5.0.0"
rand = "0.9.0"
nalgebra = { version = "0.33.2", features=["rand"] }
scilib = "1.0.0"
roots = "0.0.8"
polynomial = "0.2.6"
derive_more = { version = "2.0.1", features = ["constructor", "from"] }

[dev-dependencies]
approx = "0.5.1"
test-case = "3.3.1"
